@@ -3,6 +3,7 @@ Version 7.8.3
 
 - Add User to RavenContext and ContextBuilderHelper. (thanks mpecan)
 - Add ``contexts`` field support to Events.
+- Automatically collect device information in ``contexts`` field on Android.
 
 Version 7.8.2
 -------------
